# artifishswarm

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
artifishswarm/: __init__.py  afsa.py  functions.py  utils.py
examples/: ackley_3D.py  basic_usage.py  benchmarks.py  benchmarks_vis.py  crowding_factor.py  leaping_behavior.py  vizualize.py
examples/data/: ackley.txt  ackley_0.csv  ackley_1.csv  ackley_2.csv  ackley_3.csv  ackley_4.csv  ackley_5.csv  ackley_6.csv  ackley_7.csv  ackley_8.csv  ackley_9.csv  beale.txt  beale_0.csv  beale_1.csv  beale_2.csv  beale_3.csv  beale_4.csv  beale_5.csv  beale_6.csv  beale_7.csv  beale_8.csv  beale_9.csv  bukin6.txt  bukin6_0.csv  bukin6_1.csv  bukin6_2.csv  bukin6_3.csv  bukin6_4.csv  bukin6_5.csv  bukin6_6.csv  bukin6_7.csv  bukin6_8.csv  bukin6_9.csv  eggholder.txt  eggholder_0.csv  eggholder_1.csv  eggholder_2.csv  eggholder_3.csv  eggholder_4.csv  eggholder_5.csv  (+46 more)
examples/data/niezbytdobredata/: levi13.txt
test/: test_afsa.py  test_functions.py
