[metadata]
name = artifishswarm
url = https://github.com/Fruktus/artifishswarm
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    artifishswarm
python_requires = >=3.8
install_requires =
    numpy ~=1.21.4
    scipy ~=1.9.0
    plotly ~=5.10.0
    pandas ~=1.5.0
    tqdm ~= 4.64.1
    pymoo ~= 0.6.0